--- a/notepad/.classpath
+++ b/notepad/.classpath
@@ -7,5 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/badja/Downloads/mongodb-driver-core-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/badja/Downloads/bson-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/badja/Downloads/mongodb-driver-sync-4.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
