--- a/notepad/.classpath
+++ b/notepad/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="C:/Users/badja/Downloads/mongodb-driver-core-4.4.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/badja/Downloads/bson-4.4.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/badja/Downloads/mongodb-driver-sync-4.4.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
